image error complete.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     def nav_version = "2.3.2"
     def retrofit_version = "2.9.0"
 
