--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-android-extensions'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -56,6 +57,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-rc01'
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
