--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ dependencies {
 
     implementation "androidx.paging:paging-runtime:$paging_version"
     implementation "androidx.paging:paging-rxjava3:$paging_version"
+
+    // https://github.com/square/AssistedInject
+    compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:0.6.0"
+    kapt "com.squareup.inject:assisted-inject-processor-dagger2:0.6.0"
 }
 
 def getApiKey() {
