--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    def nav_version = "2.3.2"
     def retrofit_version = "2.9.0"
     def paging_version = "3.0.0-alpha12"
 
@@ -60,8 +59,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-rc01'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    // Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
