--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
         buildConfigField("String", "TMDB_API_KEY", "\"" + getApiKey() + "\"")
         buildConfigField("String", "TMDB_BASE_URL", "\"" + "https://api.themoviedb.org/3/\"")
+        buildConfigField("String", "YOUTUBE_VIDEO_URL", '"https://m.youtube.com/watch?v=%s"')
     }
 
     buildTypes {
@@ -93,6 +94,8 @@ dependencies {
     // https://github.com/square/AssistedInject
     compileOnly "com.squareup.inject:assisted-inject-annotations-dagger2:0.6.0"
     kapt "com.squareup.inject:assisted-inject-processor-dagger2:0.6.0"
+
+    implementation 'com.github.smarteist:autoimageslider:1.3.2'
 }
 
 def getApiKey() {
